Correct all URLs pointing to the MySQL manual. (Bug #21467)